--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 version=0.9.2-SNAPSHOT
 
 kotlin_version=1.2.41
-coroutines_version=0.22.5
+coroutines_version=0.23.0-dev-1
 dokka_version=0.9.16
 
 netty_version=4.1.24.Final
